--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "method-override": "^3.0.0",
     "nodemon": "^3.1.5",
     "react": "^18.3.1"
   }
