--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs-mate": "^4.0.0",
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
