--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-CLOUDINARY_KEY =
-CLOUDINARY_NAME= 
-CLOUDINARY_SECRET =
+CLOUDINARY_NAME= "dtsmrrabz"
+CLOUDINARY_KEY ="978992619327142"
+CLOUDINARY_SECRET ="W6xAHBvmO_Rdlvmchyep8muBhLU"
+
+MAPTILER_API_KEY = "4wjQlb5U0kdkiE54I0pZ"
