--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "node app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
     "ejs-mate": "^4.0.0",
+    "express": "^4.21.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.18.0",
     "helmet": "^8.0.0",
